// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Chip /> should render a tag 1`] = `
<Chip
  editLabel={null}
  id="some-id"
  invert={false}
  onClick={[Function]}
  onRemove={[Function]}
  removable={true}
  removeLabel={null}
>
  <div
    className="ui-shared__chip css-151hpn9"
    data-test-id="some-id"
  >
    <ButtonWithStyles
      aria-label={null}
      className="css-39vnpz"
      onClick={[Function]}
      testId="removeFilter"
    >
      <Button
        aria-label={null}
        className="tss-18hbw04-Button-root css-39vnpz"
        classes={
          {
            "root": "tss-18hbw04-Button-root",
          }
        }
        disabled={false}
        onClick={[Function]}
        testId="removeFilter"
      >
        <button
          aria-label={null}
          className="tss-18hbw04-Button-root css-39vnpz tss-18hbw04-Button-root css-39vnpz common__button"
          classes={
            {
              "root": "tss-18hbw04-Button-root",
            }
          }
          data-test-id="removeFilter"
          disabled={false}
          onClick={[Function]}
        >
          <ResponsiveContainer
            appAlways={true}
            appOnly={false}
            breakpoint="<=xs"
            webAlways={false}
            webOnly={false}
          >
            <Cross
              size={16}
            >
              <Icon
                content="<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>"
                size={16}
              >
                <svg
                  className="tss-1n8b10t-root common__icon"
                  dangerouslySetInnerHTML={
                    {
                      "__html": "<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>",
                    }
                  }
                  style={
                    {
                      "fill": undefined,
                      "fontSize": 16,
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </Cross>
          </ResponsiveContainer>
          <ResponsiveContainer
            appAlways={false}
            appOnly={false}
            breakpoint=">xs"
            webAlways={false}
            webOnly={true}
          />
        </button>
      </Button>
    </ButtonWithStyles>
    <ButtonWithStyles
      aria-label={null}
      className="css-hb5pev"
      onClick={[Function]}
    >
      <Button
        aria-label={null}
        className="tss-18hbw04-Button-root css-hb5pev"
        classes={
          {
            "root": "tss-18hbw04-Button-root",
          }
        }
        disabled={false}
        onClick={[Function]}
        testId="Button"
      >
        <button
          aria-label={null}
          className="tss-18hbw04-Button-root css-hb5pev tss-18hbw04-Button-root css-hb5pev common__button"
          classes={
            {
              "root": "tss-18hbw04-Button-root",
            }
          }
          data-test-id="Button"
          disabled={false}
          onClick={[Function]}
        >
          text
        </button>
      </Button>
    </ButtonWithStyles>
  </div>
</Chip>
`;

exports[`<Chip /> should render a without removable icon 1`] = `
<Chip
  editLabel={null}
  id="some-id"
  invert={false}
  onClick={[Function]}
  onRemove={[Function]}
  removable={false}
  removeLabel={null}
>
  <div
    className="ui-shared__chip css-1c9a5a5"
    data-test-id="some-id"
  >
    <ButtonWithStyles
      aria-label={null}
      className="css-hb5pev"
      onClick={[Function]}
    >
      <Button
        aria-label={null}
        className="tss-18hbw04-Button-root css-hb5pev"
        classes={
          {
            "root": "tss-18hbw04-Button-root",
          }
        }
        disabled={false}
        onClick={[Function]}
        testId="Button"
      >
        <button
          aria-label={null}
          className="tss-18hbw04-Button-root css-hb5pev tss-18hbw04-Button-root css-hb5pev common__button"
          classes={
            {
              "root": "tss-18hbw04-Button-root",
            }
          }
          data-test-id="Button"
          disabled={false}
          onClick={[Function]}
        >
          text
        </button>
      </Button>
    </ButtonWithStyles>
  </div>
</Chip>
`;
